--- a/src/app/core/feedback/feedback-modal/feedback-modal.component.html
+++ b/src/app/core/feedback/feedback-modal/feedback-modal.component.html
@@ -1,21 +1,5 @@
-<section class="modal-header">
-	<h2 class="modal-title">
-		Give Feedback
-	</h2>
-	<button
-		type="button"
-		class="close"
-		(click)="modalRef.hide()"
-		tooltip="Close"
-		placement="bottom"
-		aria-label="Close"
-	>
-		<span class="fa fa-times" aria-hidden="true"></span>
-	</button>
-</section>
-
 <section class="modal-body">
-	<form #submitFeedbackForm="ngForm">
+	<form #submitFeedbackForm="ngForm" (change)="validateForm()" (keyup)="validateForm()">
 		<h2 class="pb-2">What's on your mind?</h2>
 
 		<div class="form-check pl-0">
@@ -39,7 +23,7 @@
 
 		<div class="form-check pl-0">
 			<input
-				type="form-check-input"
+				class="form-check-input"
 				type="radio"
 				name="type-option-radio"
 				id="type-option-2"
@@ -56,7 +40,7 @@
 
 		<div class="form-check pl-0">
 			<input
-				type="form-check-input"
+				class="form-check-input"
 				type="radio"
 				name="type-option-radio"
 				id="type-option-3"
@@ -166,7 +150,6 @@
 				<textarea
 					name="feedbackText"
 					class="form-control"
-					style="height: 8rem;"
 					[(ngModel)]="feedback.text"
 					required
 					placeholder="Enter Feedback"
@@ -175,22 +158,4 @@
 			</div>
 		</ng-template>
 	</form>
-</section>
-
-<section class="modal-footer">
-	<div *ngIf="error" class="text-danger font-weight-bolder">
-		{{ error }}
-	</div>
-	<div *ngIf="success" class="text-success font-weight-bolder">
-		{{ success }}
-	</div>
-	<button type="button" class="btn btn-link mr-2" (click)="modalRef.hide()">Cancel</button>
-	<button
-		type="button"
-		class="btn btn-primary"
-		[disabled]="submitting || !submitFeedbackForm.form.valid"
-		(click)="submit()"
-	>
-		Submit
-	</button>
 </section>
