update modalized name and use cdk instead of domutils

--- a/src/app/common/modal/container-modal/container-modal.component.html
+++ b/src/app/common/modal/container-modal/container-modal.component.html
@@ -1,4 +1,4 @@
-<div role="dialog" cdkTrapFocus>
+<div role="dialog" cdkTrapFocus [cdkTrapFocusAutoCapture]="true">
 	<section class="modal-header">
 		<h2 class="modal-title">
 			{{ title }}
