--- a/src/app/core/feedback/feedback-modal/feedback-modal.component.html
+++ b/src/app/core/feedback/feedback-modal/feedback-modal.component.html
@@ -4,6 +4,7 @@
 
 		<div class="form-check pl-0">
 			<input
+				cdkFocusInitial
 				class="form-check-input"
 				type="radio"
 				name="type-option-radio"
