Adding component-based modal to example page

--- a/src/app/site/example/modal/modal.component.html
+++ b/src/app/site/example/modal/modal.component.html
@@ -208,4 +208,9 @@
 		</div>
 	</div>
 	<button type="button" class="mr-3 btn btn-primary" (click)="showModal()">Show Modal</button>
+
+	<h2 class="pt-5">Show Modal with Component</h2>
+	<button type="button" class="mr-3 btn btn-primary" (click)="showComponentModal()">
+		Show Component Modal
+	</button>
 </form>
