fix in-modal scrolling

--- a/src/app/site/example/forms/forms.component.html
+++ b/src/app/site/example/forms/forms.component.html
@@ -5,6 +5,7 @@
 	<div class="form-group">
 		<label for="exampleFormControlText" class="form-required">Example text</label>
 		<input
+			cdkFocusInitial
 			type="text"
 			class="form-control"
 			id="exampleFormControlText"
