--- a/src/app/common/modal/container-modal/container-modal.component.scss
+++ b/src/app/common/modal/container-modal/container-modal.component.scss
@@ -1,4 +1,12 @@
+@import '../../../../styles.scss';
+
+$box-shadow-color: rgba($modal-header-bg-color, 0.5);
+
 .modal-body {
-	max-height: calc(100vh - 200px);
+	max-height: calc(100vh - 250px);
 	overflow-y: auto;
+}
+
+.modal-footer {
+	box-shadow: 0px 0px 7px $box-shadow-color;
 }
