Fixing build error by targeting a specific scss file to import into the container modal

--- a/src/app/common/modal/container-modal/container-modal.component.scss
+++ b/src/app/common/modal/container-modal/container-modal.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles.scss';
+@import '../../../../styles/ngx-bootstrap/modal';
 
 $box-shadow-color: rgba($modal-header-bg-color, 0.5);
 
