update container-modal styling to enable bootstrap styling for scrollable modal

--- a/src/app/common/modal/container-modal/container-modal.component.scss
+++ b/src/app/common/modal/container-modal/container-modal.component.scss
@@ -2,9 +2,9 @@
 
 $box-shadow-color: rgba($ux-color-modal-header, 0.5);
 
-.modal-body {
-	max-height: calc(100vh - 250px);
-	overflow-y: auto;
+:host,
+div[cdkTrapFocus] {
+	display: contents;
 }
 
 .modal-footer {
