--- a/src/app/common/modal/container-modal/container-modal.component.html
+++ b/src/app/common/modal/container-modal/container-modal.component.html
@@ -9,7 +9,7 @@
 		</button>
 	</section>
 
-	<section class="modal-body max-window-height-overflow">
+	<section class="modal-body">
 		<ng-container #modalizableComponentContainer></ng-container>
 	</section>
 
