Removing unnecessary role of dialog. Focusing scss import to colors file

--- a/src/app/common/modal/container-modal/container-modal.component.html
+++ b/src/app/common/modal/container-modal/container-modal.component.html
@@ -1,4 +1,4 @@
-<div role="dialog" cdkTrapFocus [cdkTrapFocusAutoCapture]="isCdkFocusInitial">
+<div cdkTrapFocus [cdkTrapFocusAutoCapture]="isCdkFocusInitial">
 	<section class="modal-header">
 		<h2 class="modal-title">
 			{{ title }}
