--- a/src/app/common/modal/container-modal/container-modal.component.scss
+++ b/src/app/common/modal/container-modal/container-modal.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/shared';
+@import '../../../../styles/colors';
 
 $box-shadow-color: rgba($ux-color-modal-header, 0.5);
 
