--- a/src/app/core/feedback/feedback-modal/feedback-modal.component.html
+++ b/src/app/core/feedback/feedback-modal/feedback-modal.component.html
@@ -39,7 +39,7 @@
 
 		<div class="form-check pl-0">
 			<input
-				type="form-check-input"
+				class="form-check-input"
 				type="radio"
 				name="type-option-radio"
 				id="type-option-2"
@@ -56,7 +56,7 @@
 
 		<div class="form-check pl-0">
 			<input
-				type="form-check-input"
+				class="form-check-input"
 				type="radio"
 				name="type-option-radio"
 				id="type-option-3"
@@ -166,7 +166,6 @@
 				<textarea
 					name="feedbackText"
 					class="form-control"
-					style="height: 8rem;"
 					[(ngModel)]="feedback.text"
 					required
 					placeholder="Enter Feedback"
