--- a/src/app/common/modal/container-modal/container-modal.component.scss
+++ b/src/app/common/modal/container-modal/container-modal.component.scss
@@ -1,12 +1,3 @@
-@import '../../../../styles/colors';
-
-$box-shadow-color: rgba($ux-color-modal-header, 0.5);
-
-:host,
-div[cdkTrapFocus] {
+:host {
 	display: contents;
-}
-
-.modal-footer {
-	box-shadow: 0px 0px 7px $box-shadow-color;
 }
