convert feedback modal to use new reusable modal

--- a/src/app/core/feedback/feedback-modal/feedback-modal.component.html
+++ b/src/app/core/feedback/feedback-modal/feedback-modal.component.html
@@ -1,20 +1,11 @@
-<section class="modal-header">
-	<h2 class="modal-title">
-		Give Feedback
-	</h2>
-	<button
-		type="button"
-		class="close"
-		(click)="modalRef.hide()"
-		tooltip="Close"
-		placement="bottom"
-		aria-label="Close"
-	>
-		<span class="fa fa-times" aria-hidden="true"></span>
-	</button>
-</section>
-
-<section class="modal-body">
+<asy-modal
+	title="Give Feedback"
+	okText="Submit"
+	(ok)="submit()"
+	(cancel)="modalRef.hide()"
+	[disableOk]="submitting || !submitFeedbackForm.form.valid"
+	[autoCaptureFocus]="true"
+>
 	<form #submitFeedbackForm="ngForm">
 		<h2 class="pb-2">What's on your mind?</h2>
 
@@ -27,6 +18,7 @@
 				value="General Feedback"
 				[(ngModel)]="feedback.type"
 				required
+				cdkFocusInitial
 			/>
 			<label for="type-option-1" class="form-check-label mb-2"
 				>Ask a question or make a comment</label
@@ -174,22 +166,4 @@
 			</div>
 		</ng-template>
 	</form>
-</section>
-
-<section class="modal-footer">
-	<div *ngIf="error" class="text-danger font-weight-bolder">
-		{{ error }}
-	</div>
-	<div *ngIf="success" class="text-success font-weight-bolder">
-		{{ success }}
-	</div>
-	<button type="button" class="btn btn-link mr-2" (click)="modalRef.hide()">Cancel</button>
-	<button
-		type="button"
-		class="btn btn-primary"
-		[disabled]="submitting || !submitFeedbackForm.form.valid"
-		(click)="submit()"
-	>
-		Submit
-	</button>
-</section>
+</asy-modal>
