--- a/src/styles/_ng-select.scss
+++ b/src/styles/_ng-select.scss
@@ -59,3 +59,7 @@ $ng-select-tag-bg-color: $ux-color-primary !default;
 		}
 	}
 }
+
+body > .ng-dropdown-panel.ng-select-bottom {
+	margin-top: 19px;
+}
