--- a/src/app/core/audit/audit-view-details-modal/audit-view-details-modal.component.html
+++ b/src/app/core/audit/audit-view-details-modal/audit-view-details-modal.component.html
@@ -1,33 +1,16 @@
-<div class="modal-header">
-	<h3>
-		<span style="text-transform: capitalize"
-			>{{ auditEntry?.audit?.auditType }} {{ auditEntry?.audit?.action + 'd' }}</span
-		><span>
-			by {{ auditEntry?.audit?.actor?.username }} on {{ auditEntry?.created | utcDate }}</span
-		>
-		<span class="pull-right">
-			<a
-				class="btn-icon no-href"
-				(click)="modalRef.hide()"
-				tooltip="Close"
-				placement="bottom"
-				container="body"
-			>
-				<span class="fa fa-times"></span>
-			</a>
-		</span>
-	</h3>
-</div>
-
-<div class="modal-body">
+<asy-modal
+	title="{{ auditEntry?.audit?.auditType | titlecase }} {{
+		auditEntry?.audit?.action + 'd'
+	}} by {{ auditEntry?.audit?.actor?.username }} on {{ auditEntry?.created | utcDate }}"
+	okText="Close"
+	cancelText=""
+	(ok)="modalRef.hide()"
+	(cancel)="modalRef.hide()"
+>
 	<div class="row">
-		<div class="col-md-6">
+		<div class="col-md-12">
 			<h4 *ngIf="auditEntry?.audit?.object?.title">{{ auditEntry?.audit?.object?.title }}</h4>
 			<pre>{{ auditEntry?.audit?.object | json }}</pre>
 		</div>
 	</div>
-</div>
-
-<div class="modal-footer">
-	<button class="btn btn-link" (click)="modalRef.hide()">Close</button>
-</div>
+</asy-modal>
