fix: add support for an info alert

--- a/src/app/common/system-alert/system-alert-icon.component.html
+++ b/src/app/common/system-alert/system-alert-icon.component.html
@@ -2,4 +2,5 @@
 	<span *ngSwitchCase="'success'" class="fa fa-fw fa-check-circle"></span>
 	<span *ngSwitchCase="'warning'" class="fa fa-fw fa-exclamation"></span>
 	<span *ngSwitchCase="'danger'" class="fa fa-fw fa-exclamation-triangle"></span>
+	<span *ngSwitchCase="'info'" class="fa fa-fw fa-info-circle"></span>
 </div>
