issue #72 delete user functionality

--- a/src/app/core/admin/user-management/admin-list-users.component.html
+++ b/src/app/core/admin/user-management/admin-list-users.component.html
@@ -149,7 +149,10 @@
 									>
 								</li>
 								<li>
-									<a class="dropdown-item" (click)="confirmDeleteUser(user)"
+									<a
+										*ngIf="user.userModel.name != this.session.name"
+										class="dropdown-item"
+										(click)="confirmDeleteUser(user)"
 										>Delete</a
 									>
 								</li>
