issue #72 give all users access to delete their account

--- a/src/app/core/admin/user-management/admin-list-users.component.html
+++ b/src/app/core/admin/user-management/admin-list-users.component.html
@@ -149,10 +149,7 @@
 									>
 								</li>
 								<li>
-									<a
-										*ngIf="user.userModel.name != this.session.name"
-										class="dropdown-item"
-										(click)="confirmDeleteUser(user)"
+									<a class="dropdown-item" (click)="confirmDeleteUser(user)"
 										>Delete</a
 									>
 								</li>
