--- a/src/app/core/site-navbar/site-navbar.component.scss
+++ b/src/app/core/site-navbar/site-navbar.component.scss
@@ -77,6 +77,7 @@
 			&.active-link {
 				background-color: $nav-element-active-background-color;
 				border-left: $nav-element-active-indicator-width solid $nav-element-active-color;
+				color: $nav-element-active-color;
 
 				> span.fa {
 					margin-left: $nav-element-icon-margin-left - $nav-element-active-indicator-width;
