--- a/src/app/core/admin/user-management/admin-list-users.component.html
+++ b/src/app/core/admin/user-management/admin-list-users.component.html
@@ -55,9 +55,15 @@
 					<button routerLink="/admin/user" type="button" class="btn btn-primary ml-3">
 						<span class="fa fa-user-plus"></span> Create User
 					</button>
+					<button routerLink="/admin/user" type="button" class="btn btn-primary ml-3">
+						<span class="fa fa-arrow-up"></span> Create User
+					</button>
 				</ng-template>
 
 				<ng-template #tableHeader>
+					<button routerLink="/admin/user" type="button" class="btn btn-primary ml-3">
+						<span class="fa fa-arrow-down"></span> Create User
+					</button>
 					<th scope="col" *ngFor="let header of headersToShow">
 						<sortable-table-header
 							[header]="header"
@@ -70,6 +76,9 @@
 				</ng-template>
 
 				<ng-template #tableRow let-user="item" let-i="index">
+					<button routerLink="/admin/user" type="button" class="btn btn-primary ml-3">
+						<span class="fa fa-angle-right"></span> Create User
+					</button>
 					<td [hidden]="!columns.name.show">{{ user.userModel.name }}</td>
 					<td
 						[hidden]="!columns.username.show"
@@ -134,6 +143,7 @@
 					<td class="text-right" style="max-width: 50px;">
 						<span class="dropdown border-left pl-2 py-1" container="body" dropdown>
 							<span
+								id="drop"
 								class="dropdown-toggle dropdown-toggle-hide-caret px-2"
 								style="cursor: pointer;"
 								dropdownToggle
@@ -149,7 +159,9 @@
 									>
 								</li>
 								<li>
-									<a class="dropdown-item" (click)="confirmDeleteUser(user)"
+									<a
+										class="dropdown-item delete"
+										(click)="confirmDeleteUser(user)"
 										>Delete</a
 									>
 								</li>
