style: Add additional scss variable for styling navbar
Additional variable allows setting border color of active nav item separate from the content color.

--- a/src/app/core/site-navbar/site-navbar.component.scss
+++ b/src/app/core/site-navbar/site-navbar.component.scss
@@ -75,7 +75,8 @@
 
 			&.active-link {
 				background-color: $nav-element-active-background-color;
-				border-left: $nav-element-active-indicator-width solid $nav-element-active-color;
+				border-left: $nav-element-active-indicator-width solid
+					$nav-element-active-border-color;
 				color: $nav-element-active-color;
 
 				> span.fa {
