--- a/src/app/core/site-navbar/_shared.scss
+++ b/src/app/core/site-navbar/_shared.scss
@@ -17,6 +17,7 @@ $nav-element-hover-color: $ux-color-white !default;
 $nav-element-hover-background-color: $ux-color-primary-medium !default;
 
 $nav-element-active-background-color: $ux-color-primary-dark !default;
+$nav-element-active-border-color: $ux-color-highlight !default;
 $nav-element-active-color: $ux-color-highlight !default;
 $nav-element-active-indicator-width: 4px !default;
 
