build: angular 10 update

--- a/src/app/core/teams/add-members-modal/add-members-modal.component.html
+++ b/src/app/core/teams/add-members-modal/add-members-modal.component.html
@@ -12,6 +12,7 @@
 			name="teamAdmin"
 			bindLabel="userModel.name"
 			placeholder="Search for user..."
+			[tabIndex]="-1"
 			[items]="users$ | async"
 			[loading]="usersLoading"
 			[typeahead]="usersInput$"
