refactor: tsc strictNullChecks complience
Additional refactors to be compliant with enabling `strictNullCheck` in tsconfig.

--- a/src/app/common/modal/configurable-modal/configurable-modal.component.html
+++ b/src/app/common/modal/configurable-modal/configurable-modal.component.html
@@ -5,7 +5,7 @@
 	(ok)="ok()"
 	(cancel)="cancel()"
 	[disableOk]="!modalForm.form.valid"
-	[autoCaptureFocus]="inputs?.length > 0"
+	[autoCaptureFocus]="inputs && inputs.length > 0"
 >
 	<p *ngIf="message" [innerHTML]="message"></p>
 	<form id="modalForm" #modalForm="ngForm">
