--- a/src/app/core/teams/team-select-input/team-select-input.component.html
+++ b/src/app/core/teams/team-select-input/team-select-input.component.html
@@ -1,5 +1,5 @@
 <ng-select
-	[items]="options$ | async"
+	[items]="(options$ | async) || []"
 	[(ngModel)]="value"
 	[placeholder]="placeholder"
 	bindLabel="name"
